update movie-container style

--- a/index.html
+++ b/index.html
@@ -125,20 +125,10 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <h3 class="movie-title">Gizli Gerçek</h3>
+                  <button class="movie-detail">İncele</button>
                 </div>
               </div>
-            </div>
-            <div class="col-4">
-              <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
-                <div class="movie-overlay">
-                  <div class="movie-score">
-                    4.6<i class="fa-solid fa-star ms-1"></i>
-                  </div>
-                  <h3 class="movie-title">Gizli Gerçek</h3>
-                </div>
-              </div>
+              <span class="movie-title">Gizli Gerçek</span>
             </div>
             <div class="col-4">
               <div class="movie-container">
@@ -151,9 +141,174 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <h3 class="movie-title">Gizli Gerçek</h3>
+                  <button class="movie-detail">İncele</button>
                 </div>
               </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4">
+              <div class="movie-container">
+                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <div class="movie-overlay">
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
             </div>
           </div>
         </div>
