add some  movie images

--- a/index.html
+++ b/index.html
@@ -159,7 +159,11 @@
           <div class="row">
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/run_gercek.jpg"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -175,7 +179,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/dilberay.png"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -191,7 +199,31 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/HO00005023_637807832787274625_beni-sevenler-listesi.png"
+                  width="90%"
+                />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Beni Sevenler Listesi</span>
+            </div>
+            <div class="col-4 mb-5">
+              <div class="movie-container">
+                <img
+                  class="movie-img"
+                  src="./assets/images/malazgirt-1071.png"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -207,7 +239,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/kaptan-pengu-ve-arkadaslari-2.png"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -223,7 +259,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/run_gercek.jpg"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -239,7 +279,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/run_gercek.jpg"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -255,19 +299,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
-                <div class="movie-overlay">
-                  <div class="movie-score">
-                    4<i class="fa-solid fa-star ms-1"></i>
-                  </div>
-                  <button class="movie-detail">İncele</button>
-                </div>
-              </div>
-              <span class="movie-title">Gizli Gerçek</span>
-            </div>
-            <div class="col-4 mb-5">
-              <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/run_gercek.jpg"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -283,7 +319,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/malazgirt-1071.png"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -299,19 +339,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
-                <div class="movie-overlay">
-                  <div class="movie-score">
-                    4<i class="fa-solid fa-star ms-1"></i>
-                  </div>
-                  <button class="movie-detail">İncele</button>
-                </div>
-              </div>
-              <span class="movie-title">Gizli Gerçek</span>
-            </div>
-            <div class="col-4 mb-5">
-              <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/kaptan-pengu-ve-arkadaslari-2.png"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -327,7 +359,11 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/malazgirt-1071.png"
+                  width="90%"
+                />
                 <div class="movie-overlay">
                   <ul class="movie-types">
                     <li><img src="./assets/images/popcorn.png" /></li>
@@ -343,8 +379,56 @@
             </div>
             <div class="col-4 mb-5">
               <div class="movie-container">
-                <img src="./assets/images/run_gercek.jpg" width="90%" />
+                <img
+                  class="movie-img"
+                  src="./assets/images/run_gercek.jpg"
+                  width="90%"
+                />
                 <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4 mb-5">
+              <div class="movie-container">
+                <img
+                  class="movie-img"
+                  src="./assets/images/dilberay.png"
+                  width="90%"
+                />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
+                  <div class="movie-score">
+                    4<i class="fa-solid fa-star ms-1"></i>
+                  </div>
+                  <button class="movie-detail">İncele</button>
+                </div>
+              </div>
+              <span class="movie-title">Gizli Gerçek</span>
+            </div>
+            <div class="col-4 mb-5">
+              <div class="movie-container">
+                <img
+                  class="movie-img"
+                  src="./assets/images/kaptan-pengu-ve-arkadaslari-2.png"
+                  width="90%"
+                />
+                <div class="movie-overlay">
+                  <ul class="movie-types">
+                    <li><img src="./assets/images/popcorn.png" /></li>
+                    <li><img src="./assets/images/movie-theater.png" /></li>
+                  </ul>
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
