add detail screen

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -192,7 +192,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -212,7 +212,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Beni Sevenler Listesi</span>
@@ -232,7 +232,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -252,7 +252,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -272,7 +272,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -292,7 +292,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -312,7 +312,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -332,7 +332,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -352,7 +352,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -372,7 +372,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -392,7 +392,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -412,7 +412,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
@@ -432,7 +432,7 @@
                   <div class="movie-score">
                     4<i class="fa-solid fa-star ms-1"></i>
                   </div>
-                  <button class="movie-detail">İncele</button>
+                  <a class="movie-detail" href="detail.html">İncele</a>
                 </div>
               </div>
               <span class="movie-title">Gizli Gerçek</span>
